   (Robert Muir)

 * LUCENE-3519: BlockJoinCollector always returned null when you tried
   to retrieve top groups for any BlockJoinQuery after the first (Mark
   Harwood, Mike McCandless)

API Changes
 
 * LUCENE-3436: Add SuggestMode to the spellchecker, so you can specify the strategy
   for suggesting related terms.  (James Dyer via Robert Muir)

======================= Lucene 3.4.0 ================

New Features

 * LUCENE-3234: provide a limit on phrase analysis in FastVectorHighlighter for
   highlighting speed up. Use FastVectorHighlighter.setPhraseLimit() to set limit
   (e.g. 5000). (Mike Sokolov via Koji Sekiguchi)

 * LUCENE-3079: a new facet module which provides faceted indexing & search
   capabilities. It allows managing a taxonomy of categories, and index them
   with documents. It also provides search API for aggregating (e.g. count)
   the weights of the categories that are relevant to the search results. 
   (Shai Erera)
   
 * LUCENE-3171: Added BlockJoinQuery and BlockJoinCollector, under the
   new contrib/join module, to enable searches that require joining
   between parent and child documents.  Joined (children + parent)
   documents must be indexed as a document block, using
   IndexWriter.add/UpdateDocuments (Mark Harwood, Mike McCandless)

 * LUCENE-3233, LUCENE-3375: Added SynonymFilter for applying multi-word synonyms
   during indexing or querying (with parsers for wordnet and solr formats).
   Removed contrib/wordnet.  (Simon Rosenthal, Robert Muir, Mike McCandless)

 * LUCENE-1768: added support for numeric ranges in contrib query parser;
   added support for simple numeric queries, such as <age:4>, in contrib
   query parser (Vinicius Barros via Uwe Schindler)

Changes in runtime behavior:

 * LUCENE-1768: StandardQueryConfigHandler now uses NumericFieldConfigListener
   to set a NumericConfig to its corresponding FieldConfig;
   StandardQueryTreeBuilder now uses DummyQueryNodeBuilder for