@@ -78,26 +78,92 @@ name|SimpleFragListBuilder
 implements|implements
 name|FragListBuilder
 block|{
-DECL|field|MARGIN
+DECL|field|MARGIN_DEFAULT
 specifier|public
 specifier|static
 specifier|final
 name|int
-name|MARGIN
+name|MARGIN_DEFAULT
 init|=
 literal|6
 decl_stmt|;
-DECL|field|MIN_FRAG_CHAR_SIZE
+DECL|field|MIN_FRAG_CHAR_SIZE_FACTOR
 specifier|public
 specifier|static
 specifier|final
 name|int
-name|MIN_FRAG_CHAR_SIZE
+name|MIN_FRAG_CHAR_SIZE_FACTOR
 init|=
-name|MARGIN
-operator|*
 literal|3
 decl_stmt|;
+DECL|field|margin
+specifier|final
+name|int
+name|margin
+decl_stmt|;
+DECL|field|minFragCharSize
+specifier|final
+name|int
+name|minFragCharSize
+decl_stmt|;
+DECL|method|SimpleFragListBuilder
+specifier|public
+name|SimpleFragListBuilder
+parameter_list|(
+name|int
+name|margin
+parameter_list|)
+block|{
+if|if
+condition|(
+name|margin
+operator|<
+literal|0
+condition|)
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"margin("
+operator|+
+name|margin
+operator|+
+literal|") is too small. It must be 0 or higher."
+argument_list|)
+throw|;
+name|this
+operator|.
+name|margin
+operator|=
+name|margin
+expr_stmt|;
+name|this
+operator|.
+name|minFragCharSize
+operator|=
+name|Math
+operator|.
+name|max
+argument_list|(
+literal|1
+argument_list|,
+name|margin
+operator|*
+name|MIN_FRAG_CHAR_SIZE_FACTOR
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|SimpleFragListBuilder
+specifier|public
+name|SimpleFragListBuilder
+parameter_list|()
+block|{
+name|this
+argument_list|(
+name|MARGIN_DEFAULT
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|createFieldFragList
 specifier|public
 name|FieldFragList
@@ -114,7 +180,7 @@ if|if
 condition|(
 name|fragCharSize
 operator|<
-name|MIN_FRAG_CHAR_SIZE
+name|minFragCharSize
 condition|)
 throw|throw
 operator|new
@@ -126,7 +192,7 @@ name|fragCharSize
 operator|+
 literal|") is too small. It must be "
 operator|+
-name|MIN_FRAG_CHAR_SIZE
+name|minFragCharSize
 operator|+
 literal|" or higher."
 argument_list|)
@@ -251,7 +317,7 @@ operator|.
 name|getStartOffset
 argument_list|()
 operator|-
-name|MARGIN
+name|margin
 operator|<
 name|startOffset
 condition|?
@@ -262,7 +328,7 @@ operator|.
 name|getStartOffset
 argument_list|()
 operator|-
-name|MARGIN
+name|margin
 decl_stmt|;
 name|int
 name|en
